Image Overflow Fix

--- a/resources/app/desktop/Student/wwwroot/css/style.css
+++ b/resources/app/desktop/Student/wwwroot/css/style.css
@@ -310,8 +310,14 @@ a {
 }
 
 .slide--image img {
-  
+  width: 90%;
   height: auto;
+}
+
+.slide .slide--markdown div p
+{
+	max-width: 125ch;
+	line-height: 1.2rem;
 }
 
 pre {
